// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Verify Destroy Email Controller Snapshot Test for database error 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for expired token 1`] = `
{
  "body": {
    "message": "Your verification link has expired. Please request a new one.",
    "success": false,
  },
  "status": 410,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for inactive user 1`] = `
{
  "body": {
    "message": "Your account is blocked. Deletion is not allowed.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for invalid OTP 1`] = `
{
  "body": {
    "message": "Incorrect OTP. Please try again.",
    "success": false,
  },
  "status": 422,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for invalid token type 1`] = `
{
  "body": {
    "message": "Your verification link is invalid. Please request a new one.",
    "success": false,
  },
  "status": 410,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for missing OTP in OTP mode 1`] = `
{
  "body": {
    "message": "OTP and email is required.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for missing token in link mode 1`] = `
{
  "body": {
    "message": "Verification token is missing.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for successful delete using OTP 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullname": "Test User",
      "username": "test",
    },
    "message": "User deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for successful delete using link 1`] = `
{
  "body": {
    "data": {
      "email": "test@gmail.com",
      "fullname": "Test User",
      "username": "test",
    },
    "message": "User deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for user mismatch in OTP mode 1`] = `
{
  "body": {
    "message": "User mismatch. Action not permitted.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Verify Destroy Email Controller Snapshot Test for user not found 1`] = `
{
  "body": {
    "message": "Invalid token. Please re-check it.",
    "success": false,
  },
  "status": 404,
}
`;
